# 2024-ETHGlobal-Bangkok

./: .env  Cargo.toml  Notes.md  README.md
client/: Cargo.toml  Makefile.toml
client/src/: abi.rs  args.rs  chain.rs  lib.rs  trace.rs
client/src/action/: mod.rs  verify.rs  vote.rs
client/src/invoke/: contract.rs  counter.rs  mod.rs
contract/: Makefile.toml
contracts/: Cargo.toml  Makefile.toml
contracts/src/: lib.rs
counter/: Cargo.toml  Makefile.toml
counter/src/: lib.rs
wid/: Cargo.toml
