[package]
name = "contracts"
version = "0.1.1"
edition = "2021"
default-run = "contracts"

[dependencies]
alloy-primitives = "0.8.12"
alloy-sol-types = "0.8.12"
mini-alloc = "0.6.0"
stylus-sdk = "0.6.0"
hex = "0.4.3"
dotenv = "0.15.0"
motsu = "0.2.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "contracts"
path = "src/main.rs"

[[bin]]
name = "abi"
path = "src/bin/abi.rs"
required-features = ["export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
